# jampio-shared

./: CMakeLists.txt  README.md
cmake/: GNUInstallDirsCustom.cmake  i386-linux-gnu.cmake
src/: botlib.h  configstrings.h  eflags.h  etypes.h  g2.h  game.h  gametype.h  maskflags.h  math.c  persEnum.h  renderer_types.h  shared.c  shared.h  surfaceflags.h  teams.h  vec.h
